--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ aliases:
       only: master
 
 defaults: &defaults
-  working_directory: ~/grafana-piechart-panel
+  working_directory: ~/grafana-linechart-panel
   docker:
     - image: circleci/node:10.15.3-stretch
 
@@ -32,7 +32,7 @@ jobs:
       - run:
           name: Build
           command: |
-            PLUGIN_NAME=grafana-piechart-panel
+            PLUGIN_NAME=grafana-linechart-panel
             yarn install --pure-lockfile --no-progress
             yarn build
             sudo apt-get install jq
@@ -90,7 +90,7 @@ jobs:
           path: coverage
 
   publish-github-release:
-    working_directory: ~/grafana-piechart-panel
+    working_directory: ~/grafana-linechart-panel
     docker:
       - image: cibuilds/github:0.12
     steps:
@@ -103,7 +103,7 @@ jobs:
       - run:
           name: "Publish Release on GitHub"
           command: |
-            PLUGIN_NAME=grafana-piechart-panel
+            PLUGIN_NAME=grafana-linechart-panel
             apk add --update --no-cache jq
             RELEASE_NOTES=`awk 'BEGIN {FS="##"; RS=""} FNR==3 {print; exit}' CHANGELOG.md`
             VERSION=`cat dist/plugin.json|jq '.info.version'| sed s/\"//g`
