--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "piechart-panel",
-  "version": "1.3.9",
-  "description": "Pie chart panel for Grafana",
+  "name": "linechart-panel",
+  "version": "0.0.1",
+  "description": "line chart panel for Grafana",
   "scripts": {
     "build": "grafana-toolkit plugin:build",
     "test": "grafana-toolkit plugin:test",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/grafana/piechart-panel.git"
+    "url": "git+https://github.com/grafana/linechart-panel.git"
   },
   "author": "Grafana Labs",
   "license": "MIT",
